# algebraic-variety-cross-section

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  MOVES.md  README.md  app.py  appearance_panel.py  icons.py  parameter_grid_panel.py  parameters_panel.py  pyproject.toml  render_worker.py  requirements.txt  styles.py  surfaces.py  ui_helpers.py  view_panel.py
.claude/: .registry-manifest.json  model-policy.yaml  settings.local.json
.claude/agents/: capability-scout-adversary.md  capability-scout-challenger.md  capability-scout-competitive.md  capability-scout-desktop-platform.md  capability-scout-math-research.md  capability-scout-oss-trends.md  frontend-uplift-challenger.md  frontend-uplift-current-state-critic.md  frontend-uplift-inspiration-scout.md  frontend-uplift-library-scout.md  frontend-uplift-visual-scout.md  milestone-adversary-critic.md  milestone-frontend-ux-critic.md  milestone-implementer.md  milestone-oss-scout.md  milestone-researcher.md  repository-architect-anchor-updater.md  repository-architect-best-practices-scout.md  repository-architect-current-state-auditor.md  repository-architect-design-adversary.md  repository-architect-dry-run-validator.md  repository-architect-execution-critic.md  repository-architect-implementer.md  (+7 more)
.github/: dependabot.yml
_qt/: __init__.py  icons.py  parameter_grid_math.py  styles.py  ui_helpers.py
cross_section/: __init__.py  clip.py
export/: README.md  __init__.py  __main__.py  build_volumes.py  printable.py
panels/: __init__.py  appearance.py  parameters.py  view.py
plans/: panel-refresh-2026q2-roadmap.md.migrated  realtime-variety-render-roadmap.md
render/: __init__.py
tests/: test_build_volumes.py  test_clip_cache.py  test_clip_domain.py  test_coarse_n.py  test_csg_clip_families.py  test_debounce.py  test_enriques_hq_smoothing.py  test_grid_helpers.py  test_hq_disable_toast.py  test_icons.py  test_import_smoke.py  test_marching_cubes_empty.py  test_mesh_export.py  test_mesh_generators.py  test_numba_field_kernels.py  test_panels_shims.py  test_parameter_grid.py  test_parameters_panel.py  test_print_options.py  test_qsettings_persistence.py  test_r2_shims.py  test_render_busy_spinner.py  test_render_queue_latest.py  test_render_worker.py  test_status_bar_bbox.py  test_stl_export.py  test_styles_palette.py  test_typical_ms.py  test_view_panel_export.py
varieties/: __init__.py  _kernels.py  _marching.py  calabi_yau.py  dispatch.py  enriques.py  fano.py  k3.py  registry.py  tooltips.py  types.py
(+407 files in other folders)
