[project]
name = "algebraic-variety-cross-section"
version = "0.0.1"
description = "Interactive desktop visualiser for algebraic-variety cross-sections (implicit and parametric surfaces)"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6,<7",
    "pyvista>=0.46,<0.49",
    "pyvistaqt>=0.11.4,<0.12",
    "numpy>=1.26,<3",
    "numba>=0.65,<0.66",
    "qtawesome>=1.4.2,<2",
    # /repository-architect restructure tooling (Phase 3 dry-run + Phase 4 import rewrites + coverage parity)
    "libcst>=1.5,<2",
    "pydeps>=3.0,<4",
    "coverage>=7.6,<8",
]

# No [project.scripts] entry-points — preserves `python app.py` invocation pattern.
# See README.md for usage.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
