[project]
name = "algebraic-variety-cross-section"
version = "0.0.1"
description = "Interactive desktop visualiser for algebraic-variety cross-sections (implicit and parametric surfaces)"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.11.1,<7",
    "pyvista>=0.48.4,<0.49",
    "pyvistaqt>=0.12.0,<0.13",
    "numpy>=2.5.1,<3",
    "numba>=0.66.0,<0.67",
    "qtawesome>=1.4.2,<2",
    # /repository-architect restructure tooling (Phase 3 dry-run + Phase 4 import rewrites + coverage parity)
    "libcst>=1.8.6,<2",
    "pydeps>=3.0.6,<4",
    "coverage>=7.15.2,<8",
]

# No [project.scripts] entry-points — preserves `python app.py` invocation pattern.
# See README.md for usage.

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.importlinter]
root_packages = ["varieties", "_qt", "render", "cross_section", "export"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "varieties is pure-math (forbidden from importing app, _qt, panels, Qt)"
type = "forbidden"
source_modules = ["varieties"]
forbidden_modules = ["app", "_qt", "panels", "PySide6", "PyQt5", "PyQt6"]

[[tool.importlinter.contracts]]
name = "cross_section is pure-pipeline (forbidden from Qt)"
type = "forbidden"
source_modules = ["cross_section"]
forbidden_modules = ["_qt", "PySide6", "PyQt5", "PyQt6"]

[[tool.importlinter.contracts]]
name = "export is a Qt-free consumer layer (forbidden from app, _qt, render, Qt)"
type = "forbidden"
source_modules = ["export"]
forbidden_modules = ["app", "_qt", "render", "PySide6", "PyQt5", "PyQt6"]
